[package]
name = "yew-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo-net = "0.4.0"
serde = "1.0.188"
tokio = "1.32.0"
wasm-bindgen-futures = "0.4.37"
yew = { version = "0.20", features = ["csr"] }
